--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@ionic-native/geolocation": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
+    "cordova-android": "^6.2.3",
     "cordova-plugin-geolocation": "^2.4.3",
     "ionic-angular": "3.6.1",
     "ionicons": "3.0.0",
